# news_scraper

./: .gitignore  DEVELOPER.md  README.md  pyproject.toml  sample_url_list.txt
config/: .env.example
src/news_scraper/: __init__.py  main.py  requirements.txt
src/news_scraper/config/: settings.py
src/news_scraper/core/: browser_tools.py  genai.py  llamaindex.py  scraper.py  toolkits.py
src/news_scraper/db/: README.md  __init__.py  chroma_client.py
src/news_scraper/models/: article.py
src/news_scraper/utils/: arg_parser.py  helpers.py  logging.py
